Fix navigation bug on mobile

--- a/mobileApp/app/styles/_components.scss
+++ b/mobileApp/app/styles/_components.scss
@@ -45,7 +45,7 @@
   border-radius: 4px;
   padding: 20px 0 10px;
   overflow: hidden;
-  min-height: 50vh;
+  min-height: 70vh;
   &:before {
     content: "";
     background-color: $ign-red;
